edit min max description, added class for main indicators, fixed spacing betweet elements

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.mainIndicator.p {
+  margin: 10px 0 0 0;
+}
+
 #cityName {
   color: #eee;
 }
